docs: update README.md with build and run instructions